--- a/.gitignore
+++ b/.gitignore
@@ -24,8 +24,8 @@
 /nbdist/
 /.nb-gradle/
 
-# Created by https://www.gitignore.io/api/java,maven,intellij
-# Edit at https://www.gitignore.io/?templates=java,maven,intellij
+# Created by https://www.gitignore.io/api/java,macos,maven,intellij
+# Edit at https://www.gitignore.io/?templates=java,macos,maven,intellij
 
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
@@ -131,6 +131,34 @@ fabric.properties
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+### macOS ###
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
 ### Maven ###
 target/
 pom.xml.tag
@@ -143,4 +171,6 @@ buildNumber.properties
 .mvn/timing.properties
 .mvn/wrapper/maven-wrapper.jar
 
-# End of https://www.gitignore.io/api/java,maven,intellij
+# End of https://www.gitignore.io/api/java,macos,maven,intellij
+
+src/main/resources/hackday_sample.csv
