Implemented custom writer

--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,13 @@
             <artifactId>selenium-chrome-driver</artifactId>
             <version>3.5.3</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/commons-dbcp/commons-dbcp -->
+        <dependency>
+            <groupId>commons-dbcp</groupId>
+            <artifactId>commons-dbcp</artifactId>
+            <version>1.4</version>
+        </dependency>
+
     </dependencies>
 
     <build>
